--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <!DOCTYPE html>
 <html>
 
-// comment test
 <head>
-  <title>Cortney Ngo</title>
+  <title>yentroc</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="assets/style.css">
 </head>
