push new updates

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="card" id="businessCard">
       <div class="card-inner">
         <div class="card-face card-front">
-          <p>Designer</p>
-          <h1>Your Name</h1>
+          <p>UI/UX Designer</p>
+          <h1>Cortney Ngo</h1>
           <p>Some info about you.</p>
         </div>
         <div class="card-face card-back">
           <h2>Contact</h2>
-          <p>you@email.com</p>
+          <p>cortnen@snu.ac.kr</p>
           <p>123 · 213 · 3212</p>
           <p>@ighandle</p>
         </div>
